--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
     height: auto;
     padding: 0;
     margin: 0;
+    background: #303030;
     background: linear-gradient(178deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 30%, rgba(0,212,255,1) 100%);
 }
 
