--- a/css/text.css
+++ b/css/text.css
@@ -1,10 +1,11 @@
 body{
-    font-family: sans-serif;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
 }
 
 .headline{
     font-size: var(--headline-one);
     text-align: center;
+    font-weight: 200;
     color: var(--color-one);
 }
