--- a/css/assistant.css
+++ b/css/assistant.css
@@ -13,6 +13,10 @@
     bottom: 1.3rem;
 }
 
+.assistant_inner:hover{
+    cursor: pointer;
+}
+
 /* inactive Status: */
 #assist-contact{
     bottom: 6.5rem;
