--- a/css/assistant.css
+++ b/css/assistant.css
@@ -9,12 +9,12 @@
     z-index: 99;
 }
 
-#assist{
-    bottom: 1.3rem;
-}
-
 .assistant_inner:hover{
     cursor: pointer;
+}
+
+#assist{
+    bottom: 1.3rem;
 }
 
 /* inactive Status: */
@@ -45,6 +45,26 @@
     visibility: initial;
     transform: translateY(0);
     animation: bounce 100ms 100ms;
+}
+
+.contact{
+    position: fixed;
+    bottom: 2rem;
+    right: 6.5rem;
+    padding: 5rem;
+    background: var(--color-one);
+    box-shadow: 0 0 5px;
+    visibility: hidden;
+    opacity: 0;
+    transform: translateX(50px);
+    transition: 200ms ease-out;
+    z-index: 97;
+}
+
+.contact.active{
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(0);
 }
 
 @keyframes bounce{
