--- a/css/assistant.css
+++ b/css/assistant.css
@@ -5,7 +5,6 @@
     border: 1px solid transparent;
     border-radius: 50%;
     background: var(--color-one);
-    box-shadow: 0 0 5px;
     z-index: 99;
 }
 
@@ -13,8 +12,43 @@
     cursor: pointer;
 }
 
+.icon svg{
+    position: absolute;
+    display: block;
+    margin: auto;
+    fill: var(--text-color);
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: 99;
+}
+
+.icon p{
+    position: absolute;
+    margin: 0;
+    color: var(--text-color);
+    font-size: 3rem;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    text-align: center;
+    z-index: 99;
+}
+
+.icon svg:hover{
+    filter: invert(20%);
+}
+
 #assist{
     bottom: 1.3rem;
+    transform: rotate(0deg);
+    transition: 200ms ease-out;
+}
+
+#assist:hover{
+    transform: rotate(90deg);
 }
 
 /* inactive Status: */
@@ -65,9 +99,35 @@
 .contact ul{
     text-align: left;
     padding: .5rem 3rem .5rem 0;
+    margin: 0;
+}
+
+.contact ul li{
+    margin-bottom: 1rem;
 }
 
 .contact.active{
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.info{
+    position: fixed;
+    bottom: 5rem;
+    right: 6.5rem;
+    padding: 1rem;
+    background: var(--color-one);
+    color: var(--text-color);
+    box-shadow: black 0 0 5px;
+    visibility: hidden;
+    opacity: 0;
+    transform: translateX(50px);
+    transition: 200ms ease-out;
+    z-index: 97;
+}
+
+.info.active{
     visibility: visible;
     opacity: 1;
     transform: translateX(0);
